--- a/readme
+++ b/readme
@@ -10,6 +10,12 @@ pip install pywhatkit
 pip install pvporcupine
 pip install hugchat
 pip install opencv-contrib-python
+pip install loguru
+pip install opentelemetry-api opentelemetry-sdk opentelemetry-instrumentation
+pip install opentelemetry-exporter-otlp
+pip install opentelemetry-sdk opentelemetry-instrumentation opentelemetry-exporter-prometheus
+
+
 
 then delete all images in the C:\Users\your user name\Desktop\AI\Geeth_AI\engine\auth\samples this path
 then run trainer.py C:\Users\your user name\Desktop\AI\Geeth_AI\engine\auth\trainer.py
